DFHack Future
    Internals
        A method for caching screen output is now available to Lua (and C++)
    Lua
    New internal commands
    New plugins
    New scripts
    New tweaks
    New features
    Fixes
    Misc Improvements
    Removed

DFHack 0.40.24-r3
    Internals
        Ruby library now included on OS X - ruby scripts should work on OS X 10.10
        libstdc++ should work with older versions of OS X
        Added support for onLoadMap/onUnloadMap.init scripts
        game type detection functions are now available in the World module
        The DFHACK_LOG_MEM_RANGES environment variable can be used to log information to stderr.log on OS X
        Fixed adventure mode menu names
        Fixed command usage information for some commands
    Lua
        Lua scripts will only be reloaded if necessary
        Added a df2console() wrapper, useful for printing DF (CP437-encoded) text to the console in a portable way
        Added a strerror() wrapper
    New internal commands
        hide/show: hide and show the console on Windows
        sc-script: Allows additional scripts to be run when certain events occur (similar to onLoad*.init scripts)
    New plugins
        autohauler: A hauling-only version of autolabor
    New scripts
        modtools/reaction-product-trigger: triggers callbacks when products are produced (contrast with when reactions complete)
    New tweaks
        fps-min: Fixes the in-game minimum FPS setting
        shift-8-scroll: Gives Shift+8 (or *) priority when scrolling menus, instead of scrolling the map
        tradereq-pet-gender: Displays pet genders on the trade request screen
    New features
        autolabor: A negative pool size can be specified to use the most unskilled dwarves
        catsplosion: Works on any specified races
        exportlegends: Now exports more information
    Fixes
        Fixed game type detection in:
            3dveins
            createitem
            reveal
            seedwatch