@@ -8,6 +8,7 @@ DFHack Future
     New tweaks
     New features
     Fixes
+        steam-engine: fixed a crash on arena load
     Misc Improvements
     Removed
 
